[project]
name = "use-nacos"
version = "0.1.6"
description = "A python nacos client based on the official open-api"
authors = [
    { name = "MicLon", email = "jcnd@163.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0; python_version<'3.11'",
    "httpx>=0.27.0,<1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/use-py/use-nacos"
Repository = "https://github.com/use-py/use-nacos"
"Bug Tracker" = "https://github.com/use-py/use-nacos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/use_nacos"]

[dependency-groups]
test = [
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pre-commit-hooks",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
